cmake_minimum_required(VERSION 3.15)
project(TrabalhoAEDAParte1)

set(CMAKE_CXX_STANDARD 14)

add_executable(TrabalhoAEDAParte1 main.cpp funcionario.cpp funcionario.h data.cpp data.h modalidade.cpp modalidade.h competicao.cpp competicao.h prova.cpp prova.h menu.cpp menu.h resultado.cpp resultado.h jogosol.cpp jogosol.h util.cpp util.h)
